Fix dark mode CNCF logo on Community page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,19 +53,19 @@ pre > code > span {
 }
 
 .markdown-content {
-  img {
+  img:not(.no-markdown-image-styles) {
     max-width: 90%;
     max-height: 50vh;
     height: auto;
     margin: 1.5em auto;
     display: block;
-  }
 
-  img[src$=".svg"] {
-    @mixin dark {
-      background-color: var(--mantine-color-gray-3);
-      border-radius: 0.3em;
-      padding: 0.5em 0.5em;
+    &[src$=".svg"] {
+      @mixin dark {
+        background-color: var(--mantine-color-gray-3);
+        border-radius: 0.3em;
+        padding: 0.5em 0.5em;
+      }
     }
   }
 
